--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -1114,6 +1114,7 @@ set_real_ip_from 62.182.83.214;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 64.227.159.148;
+set_real_ip_from 64.7.198.32;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 67.219.109.141;
@@ -1121,6 +1122,8 @@ set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
+set_real_ip_from 72.5.42.204;
+set_real_ip_from 72.5.42.207;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
