--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.174.253.222;
-allow 103.186.0.144;
 allow 103.196.37.111;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -115,7 +114,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -125,6 +123,7 @@ allow 130.193.15.186;
 allow 13.126.132.195;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 13.91.247.197;
 allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -150,6 +149,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
 allow 154.213.185.133;
@@ -194,6 +194,7 @@ allow 172.104.164.133;
 allow 172.104.176.218;
 allow 172.104.182.84;
 allow 172.105.161.162;
+allow 172.232.173.127;
 allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -204,7 +205,6 @@ allow 176.118.193.33;
 allow 176.124.221.200;
 allow 176.126.253.190;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -223,6 +223,7 @@ allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
+allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.43.128.16;
@@ -813,7 +814,6 @@ allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:ac8:8b:22:0:1:9121:1111;
 allow 2001:b011:4002:37fc::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1078,6 +1078,7 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
+allow 2600:3c0a::f03c:95ff:fe8d:6977;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1370,7 +1371,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1671,6 +1671,7 @@ allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:3ea:fd::1;
 allow 2a0e:b107:dd0::3:ed78:7632;
+allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:5707:aaef:282::1;
@@ -1798,6 +1799,7 @@ allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.113;
 allow 45.94.31.180;
+allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.223;
 allow 45.95.169.224;
