--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -114,14 +114,15 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
-set_real_ip_from 13.126.132.195;
 set_real_ip_from 136.244.111.163;
+set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 13.91.247.197;
 set_real_ip_from 139.162.249.209;
@@ -285,6 +286,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -814,6 +816,7 @@ set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:ac8:8b:22:0:1:9121:1111;
 set_real_ip_from 2001:b011:4002:37fc::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -941,7 +944,6 @@ set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
 set_real_ip_from 205.185.124.193;
 set_real_ip_from 205.185.127.231;
-set_real_ip_from 207.188.137.212;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.36.191;
@@ -1063,7 +1065,6 @@ set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2406:8dc0:6005::97f2:9c02;
-set_real_ip_from 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
@@ -1097,6 +1098,7 @@ set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
+set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1730,11 +1732,13 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1799,7 +1803,6 @@ set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.9.148.113;
 set_real_ip_from 45.94.31.180;
-set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
 set_real_ip_from 45.95.169.224;
