--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -120,7 +120,6 @@ deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
-deny 13.126.132.195;
 deny 136.244.111.163;
 deny 137.184.197.55;
 deny 138.59.18.110;
@@ -139,7 +138,6 @@ deny 144.172.118.55;
 deny 144.172.118.57;
 deny 144.24.197.112;
 deny 146.59.35.38;
-deny 146.70.121.124;
 deny 146.70.164.210;
 deny 146.70.81.186;
 deny 147.45.116.145;
@@ -204,9 +202,11 @@ deny 173.0.3.111;
 deny 173.249.57.253;
 deny 173.255.198.243;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.124.221.200;
 deny 176.126.253.190;
 deny 176.58.100.98;
+deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.97.114.182;
 deny 176.97.114.202;
@@ -814,7 +814,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
-deny 2001:ac8:8b:22:0:1:9121:1111;
 deny 2001:b011:4002:37fc::b;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
@@ -1064,7 +1063,6 @@ deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
 deny 2406:8dc0:6005::97f2:9c02;
-deny 2406:da1a:a96:2f00:9461:57d2:2f87:cb16;
 deny 2407:3640:2207:8882::1;
 deny 24.240.72.170;
 deny 2.56.10.36;
@@ -1371,6 +1369,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
@@ -1397,7 +1396,6 @@ deny 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
-deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 deny 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 deny 2a03:4000:56:91:480a:eeff:fea8:f9c6;
@@ -1695,6 +1693,7 @@ deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:11:0:216:3cff:fe34:832a;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1735,7 +1734,7 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.248;
+deny 45.129.84.249;
 deny 45.131.65.34;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1775,6 +1774,7 @@ deny 45.141.215.88;
 deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
+deny 45.143.166.140;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.15.157.177;
@@ -1796,7 +1796,6 @@ deny 45.80.158.205;
 deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.8.22.207;
-deny 45.83.104.137;
 deny 45.9.148.113;
 deny 45.94.31.68;
 deny 45.95.169.130;
@@ -1935,6 +1934,7 @@ deny 8.218.9.41;
 deny 82.197.182.161;
 deny 82.221.128.191;
 deny 82.221.131.5;
+deny 82.221.139.190;
 deny 82.68.49.227;
 deny 82.85.247.254;
 deny 83.217.9.73;
