--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -287,6 +287,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1053,6 +1054,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
@@ -1080,6 +1082,7 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe8d:6977;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1734,7 +1737,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.249;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.131.65.34;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1797,6 +1800,7 @@ set_real_ip_from 45.80.158.23;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.9.148.113;
+set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -1934,7 +1938,6 @@ set_real_ip_from 8.218.9.41;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
-set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
