--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -164,6 +164,7 @@ allow 155.138.161.171;
 allow 155.94.192.114;
 allow 156.67.111.146;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.216.18.62;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -183,6 +184,7 @@ allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 168.100.10.202;
+allow 168.119.156.167;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -288,7 +290,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1372,6 +1373,7 @@ allow 2a00:1dc0:caff:99::ecd2;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
 allow 2a01:4262:1ab:ffff::133;
+allow 2a01:4f8:c013:6563::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1746,9 +1748,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
-allow 45.129.84.248;
-allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1935,7 +1934,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.25.97;
 allow 80.78.26.122;
 allow 80.82.78.14;
 allow 80.94.92.106;
