--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -499,6 +499,10 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:141:2c::1;
+deny 2a05:b0c7:6388::1;
+deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
+deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
 deny 2a06:1700:0:15::1;
 deny 2a06:1700:0:15::2;
